testsuite/tests/rename/should_fail/RnStaticValuesFail02.hs
{-# LANGUAGE StaticValues #-}

module RnStaticValuesFail02 where

f = static T

data T = TDataCons

